@@ -1,3 +1,4 @@
 DIST wxMEdit-2.9.7.tar.gz 2896491 SHA256 b2f834c65e06474046482b5a9c9c565c04b2143045436e1559f6da65fc83db77 SHA512 8bc93794d5af42503c7a60373254b6ed405245ae1f59ddd79e835ade5725f06a283d457201bdce127b4fbbc5d90e0bcbfe6b0723c159d75423173b4afa9bee34 WHIRLPOOL 9027a35b6e49e641fdc7dab702816e97439c1b8a144f45a3c08c80d1bb231ed19d6b893a47c1c139c008a06d5fbb31ae5091df86e3616aeefeb163fcc0de6ae5
 DIST wxMEdit-2.9.8.tar.gz 2899523 SHA256 8f43796431dda3b75a7ff33078827b1fac354815c85bd0325148fcda7ff5ae28 SHA512 b1df1743ed6e7f08a78642e323b209d25b227afba9b8d1fde5079a7e7f67bf2ce1c5fbff5d49af29463b8283d8bb1bd583c3dbe190153e9d085426f0daf73b22 WHIRLPOOL 7cac543b91c539cf6a76a2d4971ef3c26ff62e5d33110f361376297353643f2cb6a0a06ca326f24ff70df195956140aafaae2ab4f7452e9e5b2e96164476f7cc
 DIST wxMEdit-2.9.9.tar.gz 2916227 SHA256 f46e03eeddc5105c19688c4fcc9f36350c792c3d77396275817c2070df069248 SHA512 cf3f747a1646f8ccfc2c65a8171fabb4e2723ee0e313506adc53797a6da741692cf8a0e742e09fa9ca87602659cf626e250dca9dc6f38da41231b138f2495bf2 WHIRLPOOL 8e79737a0a57ea1354aeafb4b4a5b1c47e0ce48c1e96106936f5d2f58648d319a6724361a6b78b0d98c918239b3d26f15ae473f95e1d387c01ba223133dac8ed
+DIST wxMEdit-3.0.tar.gz 2944730 SHA256 528022fe142e5fcdc54898620d6ebfc2b92a8db059aba2dbeeff97bcb0736ddd SHA512 defd5384f0a799661fb0edfbc8ecce0716a031889b6f0d33531ab3652e2ab0acda9322d384824f4d18465000129d1c6399005750a8af10d88170b7cd2c53ddda WHIRLPOOL 87b35f04c6b80356fedd25ecab7876a3ce7bb7572a9030dfc1d7ef74c61a6967f8e5f1e9a50d908d62a225b43be3ad49ac4b23a123148a26d7c12246da4ea553
